--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: 'Asia/Shanghai'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://pesonjohn.github.io/
+url: https://iconson.top/
 permalink: :title/
 permalink_defaults:
 pretty_urls:
@@ -117,6 +117,11 @@ search:
   format: html
   limit: 10000
 
+# 站点地图
+sitemap: 
+  path: sitemap.xml
+baidusitemap:
+  path: baidusitemap.xml
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
