--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "hexo-generator-searchdb": "^1.3.3",
     "hexo-generator-sitemap": "^2.1.0",
     "hexo-generator-tag": "^1.0.0",
+    "hexo-lazyload-image": "^1.0.10",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-marked": "^4.0.0",
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^2.0.0",
+    "hexo-submit-urls-to-search-engine": "^2.0.0",
     "hexo-theme-landscape": "^0.0.3"
   }
 }
