--- a/_config.yml
+++ b/_config.yml
@@ -127,13 +127,14 @@ hexo_submit_urls_to_search_engine:
   submit_condition: count #链接被提交的条件，可选值：count | period 现仅支持count
   count: 10 # 提交最新的10个链接
   period: 900 # 提交修改时间在 900 秒内的链接
-  google: 0 # 是否向Google提交，可选值：1 | 0（0：否；1：是）
+  google: 1 # 是否向Google提交，可选值：1 | 0（0：否；1：是）
   bing: 1 # 是否向bing提交，可选值：1 | 0（0：否；1：是）
   txt_path: submit_urls.txt ## 文本文档名， 需要推送的链接会保存在此文本文档里
   bing_host: https://iconson.top ## 在bing站长平台中注册的域名
   bing_token: 7d1e3348daa648f0b06425c64412ac2d
   google_host: https://iconson.top
   google_key_file: Project.json #存放google key的json文件，放于网站根目录（与hexo _config.yml文件位置相同），请不要把json文件内容直接发布在公众仓库里!
+  google_proxy: http://127.0.0.1:7890 # 向谷歌提交网址所使用的系统 http 代理，填 0 不使用
   replace: 0  # 是否替换链接中的部分字符串，可选值：1 | 0（0：否；1：是）
   find_what: http://pesonjohn.github.io
   replace_with: https://iconson.top
@@ -148,4 +149,4 @@ deploy:
   branch: master
   plugins: hexo-generator-feed
 - type: cjh_bing_url_submitter
-#- type: cjh_google_url_submitter
+- type: cjh_google_url_submitter
