--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: next
+theme: redefine
 
 #RSS订阅
 plugin:
