--- a/package.json
+++ b/package.json
@@ -21,15 +21,19 @@
     "hexo-generator-feed": "^3.0.0",
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-index-pin-top": "^0.2.2",
-    "hexo-generator-searchdb": "^1.3.3",
+    "hexo-generator-searchdb": "^1.4.1",
     "hexo-generator-sitemap": "^2.1.0",
     "hexo-generator-tag": "^1.0.0",
     "hexo-lazyload-image": "^1.0.10",
     "hexo-renderer-ejs": "^1.0.0",
-    "hexo-renderer-marked": "^4.1.0",
+    "hexo-renderer-markdown-it": "^6.1.0",
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^2.0.0",
     "hexo-submit-urls-to-search-engine": "^2.1.0",
-    "hexo-theme-landscape": "^0.0.3"
+    "hexo-theme-landscape": "^0.0.3",
+    "hexo-theme-redefine": "^1.1.4",
+    "hexo-wordcount": "^6.0.1",
+    "markdown-it-emoji": "^2.0.2",
+    "sakana-widget": "^2.2.1"
   }
 }
