--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hexo": "^5.0.0",
     "hexo-asset-image": "git+https://github.com/CodeFalling/hexo-asset-image.git",
     "hexo-deployer-git": "^3.0.0",
+    "hexo-filter-mathjax": "^0.9.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-baidu-sitemap": "^0.1.9",
     "hexo-generator-category": "^1.0.0",
